# project-STM-ADC

./: CMakeLists.txt
FreeRTOS/: Comment
FreeRTOS/Source/CMSIS_RTOS/: cmsis_os.c  cmsis_os.h
Include/: Comment  FreeRTOSConfig.h  Sin_DAC.h  Sin_DAC_3V.h  UART.h  main.h
Include_Core/: Comment
Include_STM/: Comment
source/: Generator.c  MCO.c  Measurements.c  PWM.c  System_HSE_init.c  System_HSI_init.c  UART.c  freertos.c  main.c  sqrt_GLS.c  stm32f0xx_it.c
