# cmake_minimum_required(VERSION <specify CMake version here>)
project()

set(CMAKE_CXX_STANDARD 14)

include_directories(FreeRTOS/Source/CMSIS_RTOS)
include_directories(FreeRTOS/Source/include)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM23)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM23_NTZ)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM33)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM33_NTZ)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM23)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM23_NTZ)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM33)
include_directories(FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM33_NTZ)
include_directories(FreeRTOS/Source/portable/ARMv8M/secure/context)
include_directories(FreeRTOS/Source/portable/ARMv8M/secure/heap)
include_directories(FreeRTOS/Source/portable/ARMv8M/secure/init)
include_directories(FreeRTOS/Source/portable/ARMv8M/secure/macros)
include_directories(FreeRTOS/Source/portable/BCC/16BitDOS/common)
include_directories(FreeRTOS/Source/portable/BCC/16BitDOS/Flsh186)
include_directories(FreeRTOS/Source/portable/BCC/16BitDOS/PC)
include_directories(FreeRTOS/Source/portable/CCS/ARM_CM3)
include_directories(FreeRTOS/Source/portable/CCS/ARM_CM4F)
include_directories(FreeRTOS/Source/portable/CCS/ARM_Cortex-R4)
include_directories(FreeRTOS/Source/portable/CCS/MSP430X)
include_directories(FreeRTOS/Source/portable/CodeWarrior/ColdFire_V1)
include_directories(FreeRTOS/Source/portable/CodeWarrior/ColdFire_V2)
include_directories(FreeRTOS/Source/portable/CodeWarrior/HCS12)
include_directories(FreeRTOS/Source/portable/GCC/ARM7_AT91FR40008)
include_directories(FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S)
include_directories(FreeRTOS/Source/portable/GCC/ARM7_LPC2000)
include_directories(FreeRTOS/Source/portable/GCC/ARM7_LPC23xx)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CA53_64_BIT)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CA9)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM0)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM23/non_secure)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM23/secure)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM23_NTZ/non_secure)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM3)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM33/non_secure)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM33/secure)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM3_MPU)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM4_MPU)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM4F)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CR5)
include_directories(FreeRTOS/Source/portable/GCC/ARM_CRx_No_GIC)
include_directories(FreeRTOS/Source/portable/GCC/ATMega323)
include_directories(FreeRTOS/Source/portable/GCC/AVR32_UC3)
include_directories(FreeRTOS/Source/portable/GCC/AVR_AVRDx)
include_directories(FreeRTOS/Source/portable/GCC/AVR_Mega0)
include_directories(FreeRTOS/Source/portable/GCC/ColdFire_V2)
include_directories(FreeRTOS/Source/portable/GCC/CORTUS_APS3)
include_directories(FreeRTOS/Source/portable/GCC/H8S2329)
include_directories(FreeRTOS/Source/portable/GCC/HCS12)
include_directories(FreeRTOS/Source/portable/GCC/IA32_flat)
include_directories(FreeRTOS/Source/portable/GCC/MicroBlaze)
include_directories(FreeRTOS/Source/portable/GCC/MicroBlazeV8)
include_directories(FreeRTOS/Source/portable/GCC/MicroBlazeV9)
include_directories(FreeRTOS/Source/portable/GCC/MSP430F449)
include_directories(FreeRTOS/Source/portable/GCC/NiosII)
include_directories(FreeRTOS/Source/portable/GCC/PPC405_Xilinx)
include_directories(FreeRTOS/Source/portable/GCC/PPC440_Xilinx)
include_directories(FreeRTOS/Source/portable/GCC/RISC-V)
include_directories(FreeRTOS/Source/portable/GCC/RISC-V/chip_specific_extensions/Pulpino_Vega_RV32M1RM)
include_directories(FreeRTOS/Source/portable/GCC/RISC-V/chip_specific_extensions/RV32I_CLINT_no_extensions)
include_directories(FreeRTOS/Source/portable/GCC/RL78)
include_directories(FreeRTOS/Source/portable/GCC/RX100)
include_directories(FreeRTOS/Source/portable/GCC/RX200)
include_directories(FreeRTOS/Source/portable/GCC/RX600)
include_directories(FreeRTOS/Source/portable/GCC/RX600v2)
include_directories(FreeRTOS/Source/portable/GCC/RX700v3_DPFPU)
include_directories(FreeRTOS/Source/portable/GCC/STR75x)
include_directories(FreeRTOS/Source/portable/GCC/TriCore_1782)
include_directories(FreeRTOS/Source/portable/IAR/78K0R)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CA5_No_GIC)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CA9)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM0)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM23/non_secure)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM23/secure)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM23_NTZ/non_secure)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM3)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM33/non_secure)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM33/secure)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM33_NTZ/non_secure)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM4F)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM4F_MPU)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CM7/r0p1)
include_directories(FreeRTOS/Source/portable/IAR/ARM_CRx_No_GIC)
include_directories(FreeRTOS/Source/portable/IAR/ATMega323)
include_directories(FreeRTOS/Source/portable/IAR/AtmelSAM7S64)
include_directories(FreeRTOS/Source/portable/IAR/AtmelSAM9XE)
include_directories(FreeRTOS/Source/portable/IAR/AVR32_UC3)
include_directories(FreeRTOS/Source/portable/IAR/AVR_AVRDx)
include_directories(FreeRTOS/Source/portable/IAR/AVR_Mega0)
include_directories(FreeRTOS/Source/portable/IAR/LPC2000)
include_directories(FreeRTOS/Source/portable/IAR/MSP430)
include_directories(FreeRTOS/Source/portable/IAR/MSP430X)
include_directories(FreeRTOS/Source/portable/IAR/RISC-V)
include_directories(FreeRTOS/Source/portable/IAR/RISC-V/chip_specific_extensions/RV32I_CLINT_no_extensions)
include_directories(FreeRTOS/Source/portable/IAR/RL78)
include_directories(FreeRTOS/Source/portable/IAR/RX100)
include_directories(FreeRTOS/Source/portable/IAR/RX600)
include_directories(FreeRTOS/Source/portable/IAR/RX700v3_DPFPU)
include_directories(FreeRTOS/Source/portable/IAR/RXv2)
include_directories(FreeRTOS/Source/portable/IAR/STR71x)
include_directories(FreeRTOS/Source/portable/IAR/STR75x)
include_directories(FreeRTOS/Source/portable/IAR/STR91x)
include_directories(FreeRTOS/Source/portable/IAR/V850ES)
include_directories(FreeRTOS/Source/portable/MikroC/ARM_CM4F)
include_directories(FreeRTOS/Source/portable/MPLAB/PIC18F)
include_directories(FreeRTOS/Source/portable/MPLAB/PIC24_dsPIC)
include_directories(FreeRTOS/Source/portable/MPLAB/PIC32MEC14xx)
include_directories(FreeRTOS/Source/portable/MPLAB/PIC32MX)
include_directories(FreeRTOS/Source/portable/MPLAB/PIC32MZ)
include_directories(FreeRTOS/Source/portable/MSVC-MingW)
include_directories(FreeRTOS/Source/portable/oWatcom/16BitDOS/common)
include_directories(FreeRTOS/Source/portable/oWatcom/16BitDOS/Flsh186)
include_directories(FreeRTOS/Source/portable/oWatcom/16BitDOS/PC)
include_directories(FreeRTOS/Source/portable/Paradigm/Tern_EE/large_untested)
include_directories(FreeRTOS/Source/portable/Paradigm/Tern_EE/small)
include_directories(FreeRTOS/Source/portable/Renesas/RX100)
include_directories(FreeRTOS/Source/portable/Renesas/RX200)
include_directories(FreeRTOS/Source/portable/Renesas/RX600)
include_directories(FreeRTOS/Source/portable/Renesas/RX600v2)
include_directories(FreeRTOS/Source/portable/Renesas/RX700v3_DPFPU)
include_directories(FreeRTOS/Source/portable/Renesas/SH2A_FPU)
include_directories(FreeRTOS/Source/portable/Rowley/MSP430F449)
include_directories(FreeRTOS/Source/portable/RVDS/ARM7_LPC21xx)
include_directories(FreeRTOS/Source/portable/RVDS/ARM_CA9)
include_directories(FreeRTOS/Source/portable/RVDS/ARM_CM0)
include_directories(FreeRTOS/Source/portable/RVDS/ARM_CM3)
include_directories(FreeRTOS/Source/portable/RVDS/ARM_CM4_MPU)
include_directories(FreeRTOS/Source/portable/RVDS/ARM_CM4F)
include_directories(FreeRTOS/Source/portable/RVDS/ARM_CM7/r0p1)
include_directories(FreeRTOS/Source/portable/SDCC/Cygnal)
include_directories(FreeRTOS/Source/portable/Softune/MB91460)
include_directories(FreeRTOS/Source/portable/Softune/MB96340)
include_directories(FreeRTOS/Source/portable/Tasking/ARM_CM4F)
include_directories(FreeRTOS/Source/portable/ThirdParty/CDK/T-HEAD_CK802)
include_directories(FreeRTOS/Source/portable/ThirdParty/GCC/ARC_EM_HS)
include_directories(FreeRTOS/Source/portable/ThirdParty/GCC/ARC_v1)
include_directories(FreeRTOS/Source/portable/ThirdParty/GCC/ATmega)
include_directories(FreeRTOS/Source/portable/ThirdParty/GCC/Posix)
include_directories(FreeRTOS/Source/portable/ThirdParty/GCC/Posix/utils)
include_directories(FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32)
include_directories(FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include)
include_directories(FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa)
include_directories(FreeRTOS/Source/portable/WizC/PIC18)
include_directories(Include)
include_directories(Include_Core)
include_directories(Include_STM)

add_executable(
        .idea/.gitignore
        .idea/encodings.xml
        .idea/modules.xml
        .idea/workspace.xml
        .idea/ПРОЕКТ.iml
        FreeRTOS/Source/CMSIS_RTOS/cmsis_os.c
        FreeRTOS/Source/CMSIS_RTOS/cmsis_os.h
        FreeRTOS/Source/include/atomic.h
        FreeRTOS/Source/include/croutine.h
        FreeRTOS/Source/include/deprecated_definitions.h
        FreeRTOS/Source/include/event_groups.h
        FreeRTOS/Source/include/FreeRTOS.h
        FreeRTOS/Source/include/list.h
        FreeRTOS/Source/include/message_buffer.h
        FreeRTOS/Source/include/mpu_prototypes.h
        FreeRTOS/Source/include/mpu_wrappers.h
        FreeRTOS/Source/include/portable.h
        FreeRTOS/Source/include/projdefs.h
        FreeRTOS/Source/include/queue.h
        FreeRTOS/Source/include/semphr.h
        FreeRTOS/Source/include/stack_macros.h
        FreeRTOS/Source/include/StackMacros.h
        FreeRTOS/Source/include/stdint.readme
        FreeRTOS/Source/include/stream_buffer.h
        FreeRTOS/Source/include/task.h
        FreeRTOS/Source/include/timers.h
        FreeRTOS/Source/portable/ARMClang/Use-the-GCC-ports.txt
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM23/portasm.c
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM23/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM23_NTZ/portasm.c
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM23_NTZ/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM33/portasm.c
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM33/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM33_NTZ/portasm.c
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/GCC/ARM_CM33_NTZ/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM23/portasm.s
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM23/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM23_NTZ/portasm.s
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM23_NTZ/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM33/portasm.s
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM33/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM33_NTZ/portasm.s
        FreeRTOS/Source/portable/ARMv8M/non_secure/portable/IAR/ARM_CM33_NTZ/portmacro.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/port.c
        FreeRTOS/Source/portable/ARMv8M/non_secure/portasm.h
        FreeRTOS/Source/portable/ARMv8M/non_secure/ReadMe.txt
        FreeRTOS/Source/portable/ARMv8M/secure/context/portable/GCC/ARM_CM23/secure_context_port.c
        FreeRTOS/Source/portable/ARMv8M/secure/context/portable/GCC/ARM_CM33/secure_context_port.c
        FreeRTOS/Source/portable/ARMv8M/secure/context/portable/IAR/ARM_CM23/secure_context_port.c
        FreeRTOS/Source/portable/ARMv8M/secure/context/portable/IAR/ARM_CM23/secure_context_port_asm.s
        FreeRTOS/Source/portable/ARMv8M/secure/context/portable/IAR/ARM_CM33/secure_context_port.c
        FreeRTOS/Source/portable/ARMv8M/secure/context/portable/IAR/ARM_CM33/secure_context_port_asm.s
        FreeRTOS/Source/portable/ARMv8M/secure/context/secure_context.c
        FreeRTOS/Source/portable/ARMv8M/secure/context/secure_context.h
        FreeRTOS/Source/portable/ARMv8M/secure/heap/secure_heap.c
        FreeRTOS/Source/portable/ARMv8M/secure/heap/secure_heap.h
        FreeRTOS/Source/portable/ARMv8M/secure/init/secure_init.c
        FreeRTOS/Source/portable/ARMv8M/secure/init/secure_init.h
        FreeRTOS/Source/portable/ARMv8M/secure/macros/secure_port_macros.h
        FreeRTOS/Source/portable/ARMv8M/secure/ReadMe.txt
        FreeRTOS/Source/portable/ARMv8M/copy_files.py
        FreeRTOS/Source/portable/ARMv8M/ReadMe.txt
        FreeRTOS/Source/portable/BCC/16BitDOS/common/portasm.h
        FreeRTOS/Source/portable/BCC/16BitDOS/common/portcomn.c
        FreeRTOS/Source/portable/BCC/16BitDOS/Flsh186/port.c
        FreeRTOS/Source/portable/BCC/16BitDOS/Flsh186/prtmacro.h
        FreeRTOS/Source/portable/BCC/16BitDOS/PC/port.c
        FreeRTOS/Source/portable/BCC/16BitDOS/PC/prtmacro.h
        FreeRTOS/Source/portable/CCS/ARM_CM3/port.c
        FreeRTOS/Source/portable/CCS/ARM_CM3/portasm.asm
        FreeRTOS/Source/portable/CCS/ARM_CM3/portmacro.h
        FreeRTOS/Source/portable/CCS/ARM_CM4F/port.c
        FreeRTOS/Source/portable/CCS/ARM_CM4F/portasm.asm
        FreeRTOS/Source/portable/CCS/ARM_CM4F/portmacro.h
        FreeRTOS/Source/portable/CCS/ARM_Cortex-R4/port.c
        FreeRTOS/Source/portable/CCS/ARM_Cortex-R4/portASM.asm
        FreeRTOS/Source/portable/CCS/ARM_Cortex-R4/portmacro.h
        FreeRTOS/Source/portable/CCS/MSP430X/data_model.h
        FreeRTOS/Source/portable/CCS/MSP430X/port.c
        FreeRTOS/Source/portable/CCS/MSP430X/portext.asm
        FreeRTOS/Source/portable/CCS/MSP430X/portmacro.h
        FreeRTOS/Source/portable/CodeWarrior/ColdFire_V1/port.c
        FreeRTOS/Source/portable/CodeWarrior/ColdFire_V1/portasm.S
        FreeRTOS/Source/portable/CodeWarrior/ColdFire_V1/portmacro.h
        FreeRTOS/Source/portable/CodeWarrior/ColdFire_V2/port.c
        FreeRTOS/Source/portable/CodeWarrior/ColdFire_V2/portasm.S
        FreeRTOS/Source/portable/CodeWarrior/ColdFire_V2/portmacro.h
        FreeRTOS/Source/portable/CodeWarrior/HCS12/port.c
        FreeRTOS/Source/portable/CodeWarrior/HCS12/portmacro.h
        FreeRTOS/Source/portable/Common/mpu_wrappers.c
        FreeRTOS/Source/portable/GCC/ARM7_AT91FR40008/port.c
        FreeRTOS/Source/portable/GCC/ARM7_AT91FR40008/portISR.c
        FreeRTOS/Source/portable/GCC/ARM7_AT91FR40008/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/AT91SAM7X256.h
        FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/ioat91sam7x256.h
        FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/lib_AT91SAM7X256.c
        FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/lib_AT91SAM7X256.h
        FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/port.c
        FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/portISR.c
        FreeRTOS/Source/portable/GCC/ARM7_AT91SAM7S/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM7_LPC2000/port.c
        FreeRTOS/Source/portable/GCC/ARM7_LPC2000/portISR.c
        FreeRTOS/Source/portable/GCC/ARM7_LPC2000/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM7_LPC23xx/port.c
        FreeRTOS/Source/portable/GCC/ARM7_LPC23xx/portISR.c
        FreeRTOS/Source/portable/GCC/ARM7_LPC23xx/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CA53_64_BIT/port.c
        FreeRTOS/Source/portable/GCC/ARM_CA53_64_BIT/portASM.S
        FreeRTOS/Source/portable/GCC/ARM_CA53_64_BIT/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CA9/port.c
        FreeRTOS/Source/portable/GCC/ARM_CA9/portASM.S
        FreeRTOS/Source/portable/GCC/ARM_CA9/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM0/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM0/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM23/non_secure/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM23/non_secure/portasm.c
        FreeRTOS/Source/portable/GCC/ARM_CM23/non_secure/portasm.h
        FreeRTOS/Source/portable/GCC/ARM_CM23/non_secure/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_context.c
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_context.h
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_context_port.c
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_heap.c
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_heap.h
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_init.c
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_init.h
        FreeRTOS/Source/portable/GCC/ARM_CM23/secure/secure_port_macros.h
        FreeRTOS/Source/portable/GCC/ARM_CM23_NTZ/non_secure/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM23_NTZ/non_secure/portasm.c
        FreeRTOS/Source/portable/GCC/ARM_CM23_NTZ/non_secure/portasm.h
        FreeRTOS/Source/portable/GCC/ARM_CM23_NTZ/non_secure/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM3/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM3/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM33/non_secure/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM33/non_secure/portasm.c
        FreeRTOS/Source/portable/GCC/ARM_CM33/non_secure/portasm.h
        FreeRTOS/Source/portable/GCC/ARM_CM33/non_secure/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_context.c
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_context.h
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_context_port.c
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_heap.c
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_heap.h
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_init.c
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_init.h
        FreeRTOS/Source/portable/GCC/ARM_CM33/secure/secure_port_macros.h
        FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/portasm.c
        FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/portasm.h
        FreeRTOS/Source/portable/GCC/ARM_CM33_NTZ/non_secure/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM3_MPU/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM3_MPU/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM4_MPU/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM4_MPU/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM4F/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM4F/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1/port.c
        FreeRTOS/Source/portable/GCC/ARM_CM7/r0p1/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CM7/ReadMe.txt
        FreeRTOS/Source/portable/GCC/ARM_CR5/port.c
        FreeRTOS/Source/portable/GCC/ARM_CR5/portASM.S
        FreeRTOS/Source/portable/GCC/ARM_CR5/portmacro.h
        FreeRTOS/Source/portable/GCC/ARM_CRx_No_GIC/port.c
        FreeRTOS/Source/portable/GCC/ARM_CRx_No_GIC/portASM.S
        FreeRTOS/Source/portable/GCC/ARM_CRx_No_GIC/portmacro.h
        FreeRTOS/Source/portable/GCC/ATMega323/port.c
        FreeRTOS/Source/portable/GCC/ATMega323/portmacro.h
        FreeRTOS/Source/portable/GCC/AVR32_UC3/exception.S
        FreeRTOS/Source/portable/GCC/AVR32_UC3/port.c
        FreeRTOS/Source/portable/GCC/AVR32_UC3/portmacro.h
        FreeRTOS/Source/portable/GCC/AVR_AVRDx/port.c
        FreeRTOS/Source/portable/GCC/AVR_AVRDx/porthardware.h
        FreeRTOS/Source/portable/GCC/AVR_AVRDx/portmacro.h
        FreeRTOS/Source/portable/GCC/AVR_Mega0/port.c
        FreeRTOS/Source/portable/GCC/AVR_Mega0/porthardware.h
        FreeRTOS/Source/portable/GCC/AVR_Mega0/portmacro.h
        FreeRTOS/Source/portable/GCC/ColdFire_V2/port.c
        FreeRTOS/Source/portable/GCC/ColdFire_V2/portasm.S
        FreeRTOS/Source/portable/GCC/ColdFire_V2/portmacro.h
        FreeRTOS/Source/portable/GCC/CORTUS_APS3/port.c
        FreeRTOS/Source/portable/GCC/CORTUS_APS3/portmacro.h
        FreeRTOS/Source/portable/GCC/H8S2329/port.c
        FreeRTOS/Source/portable/GCC/H8S2329/portmacro.h
        FreeRTOS/Source/portable/GCC/HCS12/port.c
        FreeRTOS/Source/portable/GCC/HCS12/portmacro.h
        FreeRTOS/Source/portable/GCC/IA32_flat/ISR_Support.h
        FreeRTOS/Source/portable/GCC/IA32_flat/port.c
        FreeRTOS/Source/portable/GCC/IA32_flat/portASM.S
        FreeRTOS/Source/portable/GCC/IA32_flat/portmacro.h
        FreeRTOS/Source/portable/GCC/MCF5235/readme.md
        FreeRTOS/Source/portable/GCC/MicroBlaze/port.c
        FreeRTOS/Source/portable/GCC/MicroBlaze/portasm.s
        FreeRTOS/Source/portable/GCC/MicroBlaze/portmacro.h
        FreeRTOS/Source/portable/GCC/MicroBlazeV8/port.c
        FreeRTOS/Source/portable/GCC/MicroBlazeV8/port_exceptions.c
        FreeRTOS/Source/portable/GCC/MicroBlazeV8/portasm.S
        FreeRTOS/Source/portable/GCC/MicroBlazeV8/portmacro.h
        FreeRTOS/Source/portable/GCC/MicroBlazeV9/port.c
        FreeRTOS/Source/portable/GCC/MicroBlazeV9/port_exceptions.c
        FreeRTOS/Source/portable/GCC/MicroBlazeV9/portasm.S
        FreeRTOS/Source/portable/GCC/MicroBlazeV9/portmacro.h
        FreeRTOS/Source/portable/GCC/MSP430F449/port.c
        FreeRTOS/Source/portable/GCC/MSP430F449/portmacro.h
        FreeRTOS/Source/portable/GCC/NiosII/port.c
        FreeRTOS/Source/portable/GCC/NiosII/port_asm.S
        FreeRTOS/Source/portable/GCC/NiosII/portmacro.h
        FreeRTOS/Source/portable/GCC/PPC405_Xilinx/FPU_Macros.h
        FreeRTOS/Source/portable/GCC/PPC405_Xilinx/port.c
        FreeRTOS/Source/portable/GCC/PPC405_Xilinx/portasm.S
        FreeRTOS/Source/portable/GCC/PPC405_Xilinx/portmacro.h
        FreeRTOS/Source/portable/GCC/PPC440_Xilinx/FPU_Macros.h
        FreeRTOS/Source/portable/GCC/PPC440_Xilinx/port.c
        FreeRTOS/Source/portable/GCC/PPC440_Xilinx/portasm.S
        FreeRTOS/Source/portable/GCC/PPC440_Xilinx/portmacro.h
        FreeRTOS/Source/portable/GCC/RISC-V/chip_specific_extensions/Pulpino_Vega_RV32M1RM/freertos_risc_v_chip_specific_extensions.h
        FreeRTOS/Source/portable/GCC/RISC-V/chip_specific_extensions/RV32I_CLINT_no_extensions/freertos_risc_v_chip_specific_extensions.h
        FreeRTOS/Source/portable/GCC/RISC-V/chip_specific_extensions/readme.txt
        FreeRTOS/Source/portable/GCC/RISC-V/Documentation.url
        FreeRTOS/Source/portable/GCC/RISC-V/port.c
        FreeRTOS/Source/portable/GCC/RISC-V/portASM.S
        FreeRTOS/Source/portable/GCC/RISC-V/portmacro.h
        FreeRTOS/Source/portable/GCC/RISC-V/readme.txt
        FreeRTOS/Source/portable/GCC/RL78/isr_support.h
        FreeRTOS/Source/portable/GCC/RL78/port.c
        FreeRTOS/Source/portable/GCC/RL78/portasm.S
        FreeRTOS/Source/portable/GCC/RL78/portmacro.h
        FreeRTOS/Source/portable/GCC/RX100/port.c
        FreeRTOS/Source/portable/GCC/RX100/portmacro.h
        FreeRTOS/Source/portable/GCC/RX100/readme.txt
        FreeRTOS/Source/portable/GCC/RX200/port.c
        FreeRTOS/Source/portable/GCC/RX200/portmacro.h
        FreeRTOS/Source/portable/GCC/RX600/port.c
        FreeRTOS/Source/portable/GCC/RX600/portmacro.h
        FreeRTOS/Source/portable/GCC/RX600/readme.txt
        FreeRTOS/Source/portable/GCC/RX600v2/port.c
        FreeRTOS/Source/portable/GCC/RX600v2/portmacro.h
        FreeRTOS/Source/portable/GCC/RX600v2/readme.txt
        FreeRTOS/Source/portable/GCC/RX700v3_DPFPU/port.c
        FreeRTOS/Source/portable/GCC/RX700v3_DPFPU/portmacro.h
        FreeRTOS/Source/portable/GCC/RX700v3_DPFPU/readme.txt
        FreeRTOS/Source/portable/GCC/STR75x/port.c
        FreeRTOS/Source/portable/GCC/STR75x/portISR.c
        FreeRTOS/Source/portable/GCC/STR75x/portmacro.h
        FreeRTOS/Source/portable/GCC/TriCore_1782/port.c
        FreeRTOS/Source/portable/GCC/TriCore_1782/portmacro.h
        FreeRTOS/Source/portable/GCC/TriCore_1782/porttrap.c
        FreeRTOS/Source/portable/IAR/78K0R/ISR_Support.h
        FreeRTOS/Source/portable/IAR/78K0R/port.c
        FreeRTOS/Source/portable/IAR/78K0R/portasm.s26
        FreeRTOS/Source/portable/IAR/78K0R/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CA5_No_GIC/port.c
        FreeRTOS/Source/portable/IAR/ARM_CA5_No_GIC/portASM.h
        FreeRTOS/Source/portable/IAR/ARM_CA5_No_GIC/portASM.s
        FreeRTOS/Source/portable/IAR/ARM_CA5_No_GIC/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CA9/port.c
        FreeRTOS/Source/portable/IAR/ARM_CA9/portASM.h
        FreeRTOS/Source/portable/IAR/ARM_CA9/portASM.s
        FreeRTOS/Source/portable/IAR/ARM_CA9/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM0/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM0/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM0/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM23/non_secure/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM23/non_secure/portasm.h
        FreeRTOS/Source/portable/IAR/ARM_CM23/non_secure/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM23/non_secure/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_context.c
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_context.h
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_context_port.c
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_context_port_asm.s
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_heap.c
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_heap.h
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_init.c
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_init.h
        FreeRTOS/Source/portable/IAR/ARM_CM23/secure/secure_port_macros.h
        FreeRTOS/Source/portable/IAR/ARM_CM23_NTZ/non_secure/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM23_NTZ/non_secure/portasm.h
        FreeRTOS/Source/portable/IAR/ARM_CM23_NTZ/non_secure/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM23_NTZ/non_secure/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM3/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM3/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM3/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM33/non_secure/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM33/non_secure/portasm.h
        FreeRTOS/Source/portable/IAR/ARM_CM33/non_secure/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM33/non_secure/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_context.c
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_context.h
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_context_port.c
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_context_port_asm.s
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_heap.c
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_heap.h
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_init.c
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_init.h
        FreeRTOS/Source/portable/IAR/ARM_CM33/secure/secure_port_macros.h
        FreeRTOS/Source/portable/IAR/ARM_CM33_NTZ/non_secure/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM33_NTZ/non_secure/portasm.h
        FreeRTOS/Source/portable/IAR/ARM_CM33_NTZ/non_secure/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM33_NTZ/non_secure/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM4F/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM4F/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM4F/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM4F_MPU/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM4F_MPU/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM4F_MPU/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM7/r0p1/port.c
        FreeRTOS/Source/portable/IAR/ARM_CM7/r0p1/portasm.s
        FreeRTOS/Source/portable/IAR/ARM_CM7/r0p1/portmacro.h
        FreeRTOS/Source/portable/IAR/ARM_CM7/ReadMe.txt
        FreeRTOS/Source/portable/IAR/ARM_CRx_No_GIC/port.c
        FreeRTOS/Source/portable/IAR/ARM_CRx_No_GIC/portASM.s
        FreeRTOS/Source/portable/IAR/ARM_CRx_No_GIC/portmacro.h
        FreeRTOS/Source/portable/IAR/ATMega323/port.c
        FreeRTOS/Source/portable/IAR/ATMega323/portmacro.h
        FreeRTOS/Source/portable/IAR/ATMega323/portmacro.s90
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/AT91SAM7S64.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/AT91SAM7S64_inc.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/AT91SAM7X128.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/AT91SAM7X128_inc.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/AT91SAM7X256.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/AT91SAM7X256_inc.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/ISR_Support.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/lib_AT91SAM7S64.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/lib_AT91SAM7X128.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/lib_AT91SAM7X256.h
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/port.c
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/portasm.s79
        FreeRTOS/Source/portable/IAR/AtmelSAM7S64/portmacro.h
        FreeRTOS/Source/portable/IAR/AtmelSAM9XE/ISR_Support.h
        FreeRTOS/Source/portable/IAR/AtmelSAM9XE/port.c
        FreeRTOS/Source/portable/IAR/AtmelSAM9XE/portasm.s79
        FreeRTOS/Source/portable/IAR/AtmelSAM9XE/portmacro.h
        FreeRTOS/Source/portable/IAR/AVR32_UC3/exception.s82
        FreeRTOS/Source/portable/IAR/AVR32_UC3/port.c
        FreeRTOS/Source/portable/IAR/AVR32_UC3/portmacro.h
        FreeRTOS/Source/portable/IAR/AVR32_UC3/read.c
        FreeRTOS/Source/portable/IAR/AVR32_UC3/write.c
        FreeRTOS/Source/portable/IAR/AVR_AVRDx/port.c
        FreeRTOS/Source/portable/IAR/AVR_AVRDx/porthardware.h
        FreeRTOS/Source/portable/IAR/AVR_AVRDx/portmacro.h
        FreeRTOS/Source/portable/IAR/AVR_AVRDx/portmacro.s90
        FreeRTOS/Source/portable/IAR/AVR_Mega0/port.c
        FreeRTOS/Source/portable/IAR/AVR_Mega0/porthardware.h
        FreeRTOS/Source/portable/IAR/AVR_Mega0/portmacro.h
        FreeRTOS/Source/portable/IAR/AVR_Mega0/portmacro.s90
        FreeRTOS/Source/portable/IAR/LPC2000/ISR_Support.h
        FreeRTOS/Source/portable/IAR/LPC2000/port.c
        FreeRTOS/Source/portable/IAR/LPC2000/portasm.s79
        FreeRTOS/Source/portable/IAR/LPC2000/portmacro.h
        FreeRTOS/Source/portable/IAR/MSP430/port.c
        FreeRTOS/Source/portable/IAR/MSP430/portasm.h
        FreeRTOS/Source/portable/IAR/MSP430/portext.s43
        FreeRTOS/Source/portable/IAR/MSP430/portmacro.h
        FreeRTOS/Source/portable/IAR/MSP430X/data_model.h
        FreeRTOS/Source/portable/IAR/MSP430X/port.c
        FreeRTOS/Source/portable/IAR/MSP430X/portext.s43
        FreeRTOS/Source/portable/IAR/MSP430X/portmacro.h
        FreeRTOS/Source/portable/IAR/RISC-V/chip_specific_extensions/RV32I_CLINT_no_extensions/freertos_risc_v_chip_specific_extensions.h
        FreeRTOS/Source/portable/IAR/RISC-V/chip_specific_extensions/readme.txt
        FreeRTOS/Source/portable/IAR/RISC-V/Documentation.url
        FreeRTOS/Source/portable/IAR/RISC-V/port.c
        FreeRTOS/Source/portable/IAR/RISC-V/portASM.s
        FreeRTOS/Source/portable/IAR/RISC-V/portmacro.h
        FreeRTOS/Source/portable/IAR/RISC-V/readme.txt
        FreeRTOS/Source/portable/IAR/RL78/ISR_Support.h
        FreeRTOS/Source/portable/IAR/RL78/port.c
        FreeRTOS/Source/portable/IAR/RL78/portasm.s87
        FreeRTOS/Source/portable/IAR/RL78/portmacro.h
        FreeRTOS/Source/portable/IAR/RX100/port.c
        FreeRTOS/Source/portable/IAR/RX100/port_asm.s
        FreeRTOS/Source/portable/IAR/RX100/portmacro.h
        FreeRTOS/Source/portable/IAR/RX100/readme.txt
        FreeRTOS/Source/portable/IAR/RX600/port.c
        FreeRTOS/Source/portable/IAR/RX600/port_asm.s
        FreeRTOS/Source/portable/IAR/RX600/portmacro.h
        FreeRTOS/Source/portable/IAR/RX600/readme.txt
        FreeRTOS/Source/portable/IAR/RX700v3_DPFPU/port.c
        FreeRTOS/Source/portable/IAR/RX700v3_DPFPU/portmacro.h
        FreeRTOS/Source/portable/IAR/RX700v3_DPFPU/readme.txt
        FreeRTOS/Source/portable/IAR/RXv2/port.c
        FreeRTOS/Source/portable/IAR/RXv2/port_asm.s
        FreeRTOS/Source/portable/IAR/RXv2/portmacro.h
        FreeRTOS/Source/portable/IAR/RXv2/readme.txt
        FreeRTOS/Source/portable/IAR/STR71x/ISR_Support.h
        FreeRTOS/Source/portable/IAR/STR71x/port.c
        FreeRTOS/Source/portable/IAR/STR71x/portasm.s79
        FreeRTOS/Source/portable/IAR/STR71x/portmacro.h
        FreeRTOS/Source/portable/IAR/STR75x/ISR_Support.h
        FreeRTOS/Source/portable/IAR/STR75x/port.c
        FreeRTOS/Source/portable/IAR/STR75x/portasm.s79
        FreeRTOS/Source/portable/IAR/STR75x/portmacro.h
        FreeRTOS/Source/portable/IAR/STR91x/ISR_Support.h
        FreeRTOS/Source/portable/IAR/STR91x/port.c
        FreeRTOS/Source/portable/IAR/STR91x/portasm.s79
        FreeRTOS/Source/portable/IAR/STR91x/portmacro.h
        FreeRTOS/Source/portable/IAR/V850ES/ISR_Support.h
        FreeRTOS/Source/portable/IAR/V850ES/port.c
        FreeRTOS/Source/portable/IAR/V850ES/portasm.s85
        FreeRTOS/Source/portable/IAR/V850ES/portasm_Fx3.s85
        FreeRTOS/Source/portable/IAR/V850ES/portasm_Hx2.s85
        FreeRTOS/Source/portable/IAR/V850ES/portmacro.h
        FreeRTOS/Source/portable/Keil/See-also-the-RVDS-directory.txt
        FreeRTOS/Source/portable/MemMang/heap_1.c
        FreeRTOS/Source/portable/MemMang/heap_2.c
        FreeRTOS/Source/portable/MemMang/heap_3.c
        FreeRTOS/Source/portable/MemMang/heap_4.c
        FreeRTOS/Source/portable/MemMang/heap_5.c
        FreeRTOS/Source/portable/MemMang/ReadMe.url
        FreeRTOS/Source/portable/MikroC/ARM_CM4F/port.c
        FreeRTOS/Source/portable/MikroC/ARM_CM4F/portmacro.h
        FreeRTOS/Source/portable/MPLAB/PIC18F/port.c
        FreeRTOS/Source/portable/MPLAB/PIC18F/portmacro.h
        FreeRTOS/Source/portable/MPLAB/PIC18F/stdio.h
        FreeRTOS/Source/portable/MPLAB/PIC24_dsPIC/port.c
        FreeRTOS/Source/portable/MPLAB/PIC24_dsPIC/portasm_dsPIC.S
        FreeRTOS/Source/portable/MPLAB/PIC24_dsPIC/portasm_PIC24.S
        FreeRTOS/Source/portable/MPLAB/PIC24_dsPIC/portmacro.h
        FreeRTOS/Source/portable/MPLAB/PIC32MEC14xx/ISR_Support.h
        FreeRTOS/Source/portable/MPLAB/PIC32MEC14xx/port.c
        FreeRTOS/Source/portable/MPLAB/PIC32MEC14xx/port_asm.S
        FreeRTOS/Source/portable/MPLAB/PIC32MEC14xx/portmacro.h
        FreeRTOS/Source/portable/MPLAB/PIC32MX/ISR_Support.h
        FreeRTOS/Source/portable/MPLAB/PIC32MX/port.c
        FreeRTOS/Source/portable/MPLAB/PIC32MX/port_asm.S
        FreeRTOS/Source/portable/MPLAB/PIC32MX/portmacro.h
        FreeRTOS/Source/portable/MPLAB/PIC32MZ/ISR_Support.h
        FreeRTOS/Source/portable/MPLAB/PIC32MZ/port.c
        FreeRTOS/Source/portable/MPLAB/PIC32MZ/port_asm.S
        FreeRTOS/Source/portable/MPLAB/PIC32MZ/portmacro.h
        FreeRTOS/Source/portable/MSVC-MingW/port.c
        FreeRTOS/Source/portable/MSVC-MingW/portmacro.h
        FreeRTOS/Source/portable/oWatcom/16BitDOS/common/portasm.h
        FreeRTOS/Source/portable/oWatcom/16BitDOS/common/portcomn.c
        FreeRTOS/Source/portable/oWatcom/16BitDOS/Flsh186/port.c
        FreeRTOS/Source/portable/oWatcom/16BitDOS/Flsh186/portmacro.h
        FreeRTOS/Source/portable/oWatcom/16BitDOS/PC/port.c
        FreeRTOS/Source/portable/oWatcom/16BitDOS/PC/portmacro.h
        FreeRTOS/Source/portable/Paradigm/Tern_EE/large_untested/port.c
        FreeRTOS/Source/portable/Paradigm/Tern_EE/large_untested/portasm.h
        FreeRTOS/Source/portable/Paradigm/Tern_EE/large_untested/portmacro.h
        FreeRTOS/Source/portable/Paradigm/Tern_EE/small/port.c
        FreeRTOS/Source/portable/Paradigm/Tern_EE/small/portasm.h
        FreeRTOS/Source/portable/Paradigm/Tern_EE/small/portmacro.h
        FreeRTOS/Source/portable/Renesas/RX100/port.c
        FreeRTOS/Source/portable/Renesas/RX100/port_asm.src
        FreeRTOS/Source/portable/Renesas/RX100/portmacro.h
        FreeRTOS/Source/portable/Renesas/RX100/readme.txt
        FreeRTOS/Source/portable/Renesas/RX200/port.c
        FreeRTOS/Source/portable/Renesas/RX200/port_asm.src
        FreeRTOS/Source/portable/Renesas/RX200/portmacro.h
        FreeRTOS/Source/portable/Renesas/RX200/readme.txt
        FreeRTOS/Source/portable/Renesas/RX600/port.c
        FreeRTOS/Source/portable/Renesas/RX600/port_asm.src
        FreeRTOS/Source/portable/Renesas/RX600/portmacro.h
        FreeRTOS/Source/portable/Renesas/RX600/readme.txt
        FreeRTOS/Source/portable/Renesas/RX600v2/port.c
        FreeRTOS/Source/portable/Renesas/RX600v2/port_asm.src
        FreeRTOS/Source/portable/Renesas/RX600v2/portmacro.h
        FreeRTOS/Source/portable/Renesas/RX600v2/readme.txt
        FreeRTOS/Source/portable/Renesas/RX700v3_DPFPU/port.c
        FreeRTOS/Source/portable/Renesas/RX700v3_DPFPU/port_asm.src
        FreeRTOS/Source/portable/Renesas/RX700v3_DPFPU/portmacro.h
        FreeRTOS/Source/portable/Renesas/RX700v3_DPFPU/readme.txt
        FreeRTOS/Source/portable/Renesas/SH2A_FPU/ISR_Support.inc
        FreeRTOS/Source/portable/Renesas/SH2A_FPU/port.c
        FreeRTOS/Source/portable/Renesas/SH2A_FPU/portasm.src
        FreeRTOS/Source/portable/Renesas/SH2A_FPU/portmacro.h
        FreeRTOS/Source/portable/Rowley/ARM7/readme.txt
        FreeRTOS/Source/portable/Rowley/MSP430F449/port.c
        FreeRTOS/Source/portable/Rowley/MSP430F449/portasm.h
        FreeRTOS/Source/portable/Rowley/MSP430F449/portext.asm
        FreeRTOS/Source/portable/Rowley/MSP430F449/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM7_LPC21xx/port.c
        FreeRTOS/Source/portable/RVDS/ARM7_LPC21xx/portASM.s
        FreeRTOS/Source/portable/RVDS/ARM7_LPC21xx/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM7_LPC21xx/portmacro.inc
        FreeRTOS/Source/portable/RVDS/ARM_CA9/port.c
        FreeRTOS/Source/portable/RVDS/ARM_CA9/portASM.s
        FreeRTOS/Source/portable/RVDS/ARM_CA9/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM_CA9/portmacro.inc
        FreeRTOS/Source/portable/RVDS/ARM_CM0/port.c
        FreeRTOS/Source/portable/RVDS/ARM_CM0/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM_CM3/port.c
        FreeRTOS/Source/portable/RVDS/ARM_CM3/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM_CM4_MPU/port.c
        FreeRTOS/Source/portable/RVDS/ARM_CM4_MPU/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM_CM4F/port.c
        FreeRTOS/Source/portable/RVDS/ARM_CM4F/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM_CM7/r0p1/port.c
        FreeRTOS/Source/portable/RVDS/ARM_CM7/r0p1/portmacro.h
        FreeRTOS/Source/portable/RVDS/ARM_CM7/ReadMe.txt
        FreeRTOS/Source/portable/SDCC/Cygnal/port.c
        FreeRTOS/Source/portable/SDCC/Cygnal/portmacro.h
        FreeRTOS/Source/portable/Softune/MB91460/__STD_LIB_sbrk.c
        FreeRTOS/Source/portable/Softune/MB91460/port.c
        FreeRTOS/Source/portable/Softune/MB91460/portmacro.h
        FreeRTOS/Source/portable/Softune/MB96340/__STD_LIB_sbrk.c
        FreeRTOS/Source/portable/Softune/MB96340/port.c
        FreeRTOS/Source/portable/Softune/MB96340/portmacro.h
        FreeRTOS/Source/portable/Tasking/ARM_CM4F/port.c
        FreeRTOS/Source/portable/Tasking/ARM_CM4F/port_asm.asm
        FreeRTOS/Source/portable/Tasking/ARM_CM4F/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/CDK/T-HEAD_CK802/port.c
        FreeRTOS/Source/portable/ThirdParty/CDK/T-HEAD_CK802/portasm.S
        FreeRTOS/Source/portable/ThirdParty/CDK/T-HEAD_CK802/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_EM_HS/arc_freertos_exceptions.c
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_EM_HS/arc_freertos_exceptions.h
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_EM_HS/arc_support.s
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_EM_HS/freertos_tls.c
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_EM_HS/port.c
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_EM_HS/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_v1/arc_freertos_exceptions.c
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_v1/arc_freertos_exceptions.h
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_v1/arc_support.s
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_v1/port.c
        FreeRTOS/Source/portable/ThirdParty/GCC/ARC_v1/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/GCC/ARM_CM33_TFM/os_wrapper_freertos.c
        FreeRTOS/Source/portable/ThirdParty/GCC/ARM_CM33_TFM/README.md
        FreeRTOS/Source/portable/ThirdParty/GCC/ATmega/port.c
        FreeRTOS/Source/portable/ThirdParty/GCC/ATmega/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/GCC/ATmega/readme.md
        FreeRTOS/Source/portable/ThirdParty/GCC/Posix/utils/wait_for_event.c
        FreeRTOS/Source/portable/ThirdParty/GCC/Posix/utils/wait_for_event.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Posix/FreeRTOS-simulator-for-Linux.url
        FreeRTOS/Source/portable/ThirdParty/GCC/Posix/port.c
        FreeRTOS/Source/portable/ThirdParty/GCC/Posix/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/GCC/RISC-V/README-for-info-on-official-MIT-license-port.txt
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/portbenchmark.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/xt_asm_utils.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/xtensa_api.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/xtensa_config.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/xtensa_context.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/xtensa_rtos.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/include/xtensa_timer.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/FreeRTOS-openocd.c
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/port.c
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/portasm.S
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/portmux_impl.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/portmux_impl.inc.h
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_context.S
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_init.c
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_intr.c
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_intr_asm.S
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_loadstore_handler.S
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_overlay_os_hook.c
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_vector_defaults.S
        FreeRTOS/Source/portable/ThirdParty/GCC/Xtensa_ESP32/xtensa_vectors.S
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/Makefile
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/port.c
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/portasm.S
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/portbenchmark.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/portclib.c
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/portmacro.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/porttrace.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/readme_xtensa.txt
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_api.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_config.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_context.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_context.S
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_init.c
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_intr.c
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_intr_asm.S
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_overlay_os_hook.c
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_rtos.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_timer.h
        FreeRTOS/Source/portable/ThirdParty/XCC/Xtensa/xtensa_vectors.S
        FreeRTOS/Source/portable/WizC/PIC18/Drivers/Tick/isrTick.c
        FreeRTOS/Source/portable/WizC/PIC18/Drivers/Tick/Tick.c
        FreeRTOS/Source/portable/WizC/PIC18/addFreeRTOS.h
        FreeRTOS/Source/portable/WizC/PIC18/Install.bat
        FreeRTOS/Source/portable/WizC/PIC18/port.c
        FreeRTOS/Source/portable/WizC/PIC18/portmacro.h
        FreeRTOS/Source/portable/readme.txt
        FreeRTOS/Source/croutine.c
        FreeRTOS/Source/event_groups.c
        FreeRTOS/Source/list.c
        FreeRTOS/Source/queue.c
        FreeRTOS/Source/stream_buffer.c
        FreeRTOS/Source/tasks.c
        FreeRTOS/Source/timers.c
        FreeRTOS/Comment
        Include/Comment
        Include/FreeRTOSConfig.h
        Include/main.h
        Include/Sin_DAC.h
        Include/Sin_DAC_3V.h
        Include/UART.h
        Include_Core/arm_common_tables.h
        Include_Core/arm_math.h
        Include_Core/Comment
        Include_Core/core_cm0.h
        Include_Core/core_cm3.h
        Include_Core/core_cm4.h
        Include_Core/core_cm4_simd.h
        Include_Core/core_cmFunc.h
        Include_Core/core_cmInstr.h
        Include_STM/Comment
        Include_STM/stm32f051x8.h
        Include_STM/stm32f0xx.h
        Include_STM/system_stm32f0xx.h
        source/freertos.c
        source/Generator.c
        source/main.c
        source/MCO.c
        source/Measurements.c
        source/PWM.c
        source/sqrt_GLS.c
        source/startup_stm32f0xx.s
        source/stm32f0xx_it.c
        source/System_HSE_init.c
        source/System_HSI_init.c
        source/UART.c)
